# claude-plan-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODING-RULES.md  LICENSE  README.md  RELEASE-NOTES.md  langgraph.json  marketplace.json  package.json  playwright.config.ts  plugin.json
langgraph_pipeline/: __init__.py  __main__.py  cli.py  pyproject.toml  studio.py  supervisor.py  worker.py
langgraph_pipeline/executor/: __init__.py  circuit_breaker.py  edges.py  escalation.py  graph.py  state.py
langgraph_pipeline/executor/nodes/: __init__.py  parallel.py  task_runner.py  task_selector.py  validator.py
langgraph_pipeline/investigation/: __init__.py  proposals.py
langgraph_pipeline/pipeline/: __init__.py  edges.py  graph.py  state.py
langgraph_pipeline/pipeline/nodes/: __init__.py  archival.py  execute_plan.py  idea_classifier.py  intake.py  investigation.py  plan_creation.py  requirements.py  scan.py  verification.py
langgraph_pipeline/shared/: __init__.py  artifact_cache.py  artifact_manifest.py  budget.py  claude_cli.py  config.py  dotenv.py  git.py  hot_reload.py  item_trace.py  langsmith.py  paths.py  quota.py  rate_limit.py  shutdown.py  signal_diagnostics.py  suspension.py  traceability.py
langgraph_pipeline/slack/: __init__.py  identity.py  notifier.py  poller.py  suspension.py
langgraph_pipeline/web/: __init__.py  completion_grouping.py  cost_log_reader.py  dashboard_state.py  proxy.py  server.py
langgraph_pipeline/web/helpers/: __init__.py  execution_tree.py  trace_narrative.py
langgraph_pipeline/web/routes/: __init__.py  analysis.py  (+8 more)
(+3395 files in other folders)
